# MPASSIT

./: CMakeLists.txt  README.md  build.sh  datetime_module.F90  input_data.F90  interp.F90  llxy_module.F  llxy_module.F90  machine-setup.sh  model_grid.F90  module_map_utils.F  module_map_utils.F90  mpassit.F90  program_setup.F90  utils.F90  write_data.F90
modulefiles/: build.derecho.intel  build.hercules.intel.lua  build.jet.intel.lua  build.jet.test.intel.lua  build.vecna.gnu  build.vecna.intel.lua
parm/: diaglist  histlist_3d  histlist_soil  namelist.input
